--- a/index.html
+++ b/index.html
@@ -533,7 +533,7 @@
 
         <div class="section-title">
           <h2>List of Publications</h2>
-          <li>Kuntal Bhandari, Shirshendu Chowdhury, Rajib Dutta, Jiten Kumbhakar, Boundary Null-Controllability of 1d Linearized Compressible Navier-Stokes System by One Control Force, preprint, <a href="https://arxiv.org/abs/2204.02375" Target="blank">https://arxiv.org/abs/2204.02375.</a><li>
+          <li>Kuntal Bhandari, Shirshendu Chowdhury, Rajib Dutta, Jiten Kumbhakar, Boundary Null-Controllability of 1d Linearized Compressible Navier-Stokes System by One Control Force, preprint, <a href="https://arxiv.org/abs/2204.02375" Target="blank">Arxiv Version.</a><li>
          </div>
       </div>
     </section><!-- End About Section -->  
