--- a/index.html
+++ b/index.html
@@ -324,9 +324,12 @@
       </div>
 
       <div data-aos="fade-left">
-              <ol>   <li><span>Kuntal Bhandari, Shirshendu Chowdhury, Rajib Dutta, Jiten Kumbhakar, <em>Boundary
+              <ol>  <li><span>J. Kumbhakar, Null controllability of one-dimensional linearized compressible navier-stokes system in periodic setup using one
+                  boundary control.</em><br>Arxiv Link: <a href="https://arXiv.org/abs/2301.04080" target="_blank">Click Here</a>
+                 <br> Current Status: <em>Submitted.</em></span></li>
+                  <li><span>Kuntal Bhandari, Shirshendu Chowdhury, Rajib Dutta, Jiten Kumbhakar, <em>Boundary
                   Null-Controllability of 1d Linearized Compressible Navier-Stokes System by One Control
-                  Force.</em><br>Arxiv Link: <a href="https://arxiv.org/abs/2204.02375" target="_blank">Click Here</a>
+                  Force.</em><br>Arxiv Link: <a href="https://arXiv.org/abs/2204.02375" target="_blank">Click Here</a>
                  <br> Current Status: <em>Submitted.</em></span></li>
                 </ol>
 
