--- a/index.html
+++ b/index.html
@@ -229,8 +229,14 @@
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
             <h3 class="resume-title">Teaching Assistant</h3>
             <div class="resume-item">
+              <h4>Mathematics I</h4>
+              <h5>Autumn 2022</h5>
+              <li>1st year undergraduate, IISER Kolkata</li>
+              <li>Instructor: Dr. Saugata Bandyopadhyay</li>
+           </div>
+            <div class="resume-item">
               <h4>Mathematics II</h4>
-              <h5>Current</h5>
+              <h5>Spring 2022</h5>
               <li>1st year undergraduate, IISER Kolkata</li>
               <li>Instructor: Dr. Anirban Banerjee</li>
            </div>
@@ -267,6 +273,17 @@
               <li>3rd year undergraduate, IISER Kolkata</li>
               <li>Instructor: Dr. Shirshendu Chowdhury</li>
             </div>
+            <h3 class="resume-title">NPTEL Live Sessions</h3>
+            <div class="resume-item">
+            <h4>Basic Linear Algebra (noc23-ma07)</h4> 
+            <h5>Current</h5>
+            <li>Instructor: Prof. I. K. Rana, IIT Bombay</li>
+          </div>
+            <div class="resume-item">
+            <h4>Introductory Course In Real Analysis (noc22-ma79)</h4> 
+            <h5>July- Oct, 2022</h5>
+            <li>Instructor: Prof. P. D. Srivastava, IIT Kharagpur</li>
+          </div>
             <h3 class="resume-title">Classes</h3>
             <div class="resume-item">
             <h4>Class 11</h4> 
@@ -285,11 +302,21 @@
               <li>Book 2: Functional Analysis, Sobolev Spaces and Partial Differential
                 Equations by Haim Brezis</li>
             </div>-->
-           <h3 class="resume-title">Workshops</h3>
+            <h3 class="resume-title">Workshops</h3>
            <div class="resume-item">
             <h4>Convex integration solutions for the transport equation</h4>
             <li>Speaker: Dr. Ujjwal Koley, TIFR CAM</li> 
             <li>Date: November 08 - 18, 2021</li>
+          </div> 
+           <div class="resume-item">
+              <h4>Short Course in Calculus of Variations</h4>
+              <li>Speaker: Professor Bernard Dacorogna, EPFL, Switzerland</li> 
+              <li>Date: January 28- February 01, 2019</li>
+            </div>
+            <h3 class="resume-title">Conferences</h3>
+           <div class="resume-item">
+            <h4>Control Theory meets the Theory of Homogenization, IIT Bombay</h4>
+            <li>Date: Feb 28- Mar 04, 2023</li>
           </div> 
            <div class="resume-item">
               <h4>Short Course in Calculus of Variations</h4>
