--- a/index.html
+++ b/index.html
@@ -351,7 +351,10 @@
       </div>
 
       <div data-aos="fade-left">
-              <ol>  <li><span>J. Kumbhakar, Null controllability of one-dimensional linearized compressible navier-stokes system in periodic setup using one
+              <ol>  
+                <li><span>Kuntal Bhandari, Jiten Kumbhakar, Subrata Majumdar, Local null-controllability of a two-parabolic nonlinear system with coupled boundary conditions by one Neumann control.</em><br>Arxiv Link: <a href="https://arXiv.org/abs/2301.04080" target="_blank">Click Here</a>
+                 <br> Current Status: <em>In preparation.</em></span></li>
+                <li><span>J. Kumbhakar, Null controllability of one-dimensional linearized compressible navier-stokes system in periodic setup using one
                   boundary control.</em><br>Arxiv Link: <a href="https://arXiv.org/abs/2301.04080" target="_blank">Click Here</a>
                  <br> Current Status: <em>Submitted.</em></span></li>
                   <li><span>Kuntal Bhandari, Shirshendu Chowdhury, Rajib Dutta, Jiten Kumbhakar, <em>Boundary
