--- a/index.html
+++ b/index.html
@@ -353,7 +353,7 @@
       <div data-aos="fade-left">
               <ol>  
                 <li><span>Kuntal Bhandari, Jiten Kumbhakar, Subrata Majumdar, Local null-controllability of a two-parabolic nonlinear system with coupled boundary conditions by one Neumann control.</em>
-                  <br>Arxiv Link: <a href="" target="_blank">Click Here</a>
+                  <br>Arxiv Link: <a href="https://hal.science/hal-04086267" target="_blank">Click Here</a>
                  <br> Current Status: <em>In preparation.</em></span></li>
                 <li><span>J. Kumbhakar, Null controllability of one-dimensional linearized compressible navier-stokes system in periodic setup using one
                   boundary control.</em>
