--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 
         <div class="section-title">
           <h2>About</h2>
-          <p>I am an Integrated PhD student at the Indian Institute of Science Education and Research Kolkata (IISER-K) in the Department of Mathematics and Statistics (DMS).</p><p> My research interest is Control of Partial Differential Equations (PDEs). More specifically, I am working on the Control of Linearized Compressible Navier-Stokes Equations in one dimension, under the supervision of Dr. Shirshendu Chowdhury.</p>
+          <p>I am an Integrated PhD student at the Indian Institute of Science Education and Research Kolkata (IISER Kolkata) in the Department of Mathematics and Statistics (DMS). My research interest is Control of Partial Differential Equations (PDEs). More specifically, I am working on the Control of fluid flow models, namely, linearized compressible Navier-Stokes equations in one dimension, and related evolution equations, under the supervision of Dr. Shirshendu Chowdhury.</p>
         </div>
 
         <div class="row">
@@ -133,7 +133,7 @@
 
         <div class="section-title">
           <h2>Résumé</h2>
-          <p>The detailed CV can be found <a href="CV_Jiten.pdf" Target="blank">here</a>.</p>
+          <p>Please find the CV in a PDF format <a href="CV_Jiten.pdf" Target="blank">here</a>.</p>
         </div>
 
         <div class="row">
@@ -347,23 +347,49 @@
     <div class="container">
 
       <div class="section-title">
+        <h2>List of Publications</h2>
+      </div>
+
+      <div data-aos="fade-left">
+              <ol>  
+                <li><span>Kuntal Bhandari, Jiten Kumbhakar, and Subrata Majumdar. <em>Local null-controllability of
+                  a two-parabolic nonlinear system with coupled boundary conditions by a Neumann control.</em>
+                  Evol. Equ. Control Theory, 13(2):587–615, 2024.
+                  <br>Arxiv Link: <a href="https://doi.org/10.3934/eect.2023059" target="_blank">Click Here</a>
+                </ol>
+
+    </div>
+
+       <div class="section-title">
         <h2>PrePrints</h2>
       </div>
 
       <div data-aos="fade-left">
               <ol>  
-                <li><span>Kuntal Bhandari, Jiten Kumbhakar, Subrata Majumdar, Local null-controllability of a two-parabolic nonlinear system with coupled boundary conditions by one Neumann control.</em>
-                  <br>Arxiv Link: <a href="https://hal.science/hal-04086267" target="_blank">Click Here</a>
-                 <br> Current Status: <em>In preparation.</em></span></li>
-                <li><span>J. Kumbhakar, Null controllability of one-dimensional linearized compressible navier-stokes system in periodic setup using one
-                  boundary control.</em>
-                  <br>Arxiv Link: <a href="https://arXiv.org/abs/2301.04080" target="_blank">Click Here</a>
+                
+                <li><span>Kuntal Bhandari, Shirshendu Chowdhury, Rajib Dutta, and Jiten Kumbhakar.
+                  <em>Boundary null-controllability of 1d linearized compressible Navier-Stokes
+                  system by one control force,</em> 2024.
+                  <br>Link: <a href="Null_controllability_Navier-Stokes.pdf" target="_blank">Click Here</a>
                  <br> Current Status: <em>Submitted.</em></span></li>
-                  <li><span>Kuntal Bhandari, Shirshendu Chowdhury, Rajib Dutta, Jiten Kumbhakar, <em>Boundary
-                  Null-Controllability of 1d Linearized Compressible Navier-Stokes System by One Control
-                  Force.</em>
-                    <br>Arxiv Link: <a href="https://arXiv.org/abs/2204.02375" target="_blank">Click Here</a>
-                 <br> Current Status: <em>Submitted.</em></span></li>
+                  <li><span>Jiten Kumbhakar. <em>Null controllability of one-dimensional barotropic
+                    and non-barotropic linearized compressible Navier-Stokes system using one boundary control</em>, 2024.
+                    <br>Arxiv Link: <a href="https://arxiv.org/abs/2301.04080" target="_blank">Click Here</a>
+                 <br> Current Status: <em>Revised version submitted.</em></span></li>
+                </ol>
+
+    </div>
+
+      <div class="section-title">
+        <h2>PhD Thesis</h2>
+      </div>
+
+      <div data-aos="fade-left">
+              <ol>  
+                
+                <li><span> Jiten Kumbhakar. <em>Boundary controllability of
+                  linearized compressible Navier-Stokes system and related equations,</em> 2024.
+                  <br>Link: <a href="Thesis_Jiten_Kumbhakar.pdf" target="_blank">Click Here</a>
                 </ol>
 
     </div>
