--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
 
         <div class="section-title">
           <h2>Résumé</h2>
-          <p>Please find the CV in a PDF format <a href="CV_Jiten.pdf" Target="blank">here</a>.</p>
+          <p>Please find the CV in a PDF format <a href="resume_new.pdf" Target="blank">here</a>.</p>
         </div>
 
         <div class="row">
