--- a/index.html
+++ b/index.html
@@ -355,7 +355,7 @@
                 <li><span>Kuntal Bhandari, Jiten Kumbhakar, and Subrata Majumdar. <em>Local null-controllability of
                   a two-parabolic nonlinear system with coupled boundary conditions by a Neumann control.</em>
                   Evol. Equ. Control Theory, 13(2):587–615, 2024.
-                  <br>Arxiv Link: <a href="https://doi.org/10.3934/eect.2023059" target="_blank">Click Here</a>
+                  <br>Link: <a href="https://doi.org/10.3934/eect.2023059" target="_blank">Click Here</a>
                 </ol>
 
     </div>
